tests/NormalTests/paczka1/small_fuzzy/26052090.err
Error in line 6: S139 S385 35,2
Error in line 9: S139 A746 41,3
